--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@catppuccin/tailwindcss": "^0.1.6"
   },
   "dependencies": {
-    "lucide-svelte": "^0.399.0"
+    "lucide-svelte": "^0.399.0",
+    "svelte-asyncable": "^2.2.0"
   }
 }
